--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "sys_io.h": "c",
         "lib.h": "c",
         "memory.h": "c",
-        "method.h": "c"
+        "method.h": "c",
+        "ds.h": "c"
     }
 }
