--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "lib.h": "c",
         "memory.h": "c",
         "method.h": "c",
-        "ds.h": "c"
+        "ds.h": "c",
+        "mod.h": "c"
     }
 }
