entry user process

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
             "type": "cppdbg",
             "name": "TransitionOS",
             "request": "launch",
-            "program": "${workspaceRoot}/src/target/kernel/os.elf",
-            "cwd": "${workspaceRoot}/src",
+            "program": "${workspaceRoot}/target/kernel/os.elf",
+            "cwd": "${workspaceRoot}",
             "MIMode": "gdb",
             "miDebuggerServerAddress": "localhost:1234",
             "miDebuggerPath": "/usr/local/bin/gdb",
